@@ -62,11 +62,14 @@ namespace MySql.Data.MySqlClient.Tests
             if (version < new Version(5, 0)) return;
 
             // first we need a routine that will run for a bit
-            execSQL("CREATE PROCEDURE spTest() BEGIN SET @start=NOW()+0; REPEAT SET @end=NOW()-@start; " +
-                "UNTIL @end >= 5000 END REPEAT; SELECT @start, @end; END");
+            execSQL(@"CREATE PROCEDURE spTest(duration INT) 
+                BEGIN 
+                    SELECT SLEEP(duration);
+                END");
 
             MySqlCommand cmd = new MySqlCommand("spTest", conn);
             cmd.CommandType = CommandType.StoredProcedure;
+            cmd.Parameters.AddWithValue("duration", 60);
 
             // now we start execution of the command
             CommandInvokerDelegate d = new CommandInvokerDelegate(CommandRunner);
@@ -126,22 +129,25 @@ namespace MySql.Data.MySqlClient.Tests
             if (version < new Version(5, 0)) return;
 
             // first we need a routine that will run for a bit
-            execSQL("CREATE PROCEDURE spTest() BEGIN SET @start=UNIX_TIMESTAMP(NOW()); " +
-                "REPEAT SET @end=UNIX_TIMESTAMP(NOW())-@start; " +
-                "UNTIL @end >= 60 END REPEAT; SELECT @start, @end; END");
+            execSQL(@"CREATE PROCEDURE spTest(duration INT) 
+                BEGIN 
+                    SELECT SLEEP(duration);
+                END");
 
             DateTime start = DateTime.Now;
             try
             {
                 MySqlCommand cmd = new MySqlCommand("spTest", conn);
+                cmd.Parameters.AddWithValue("duration", 60);
                 cmd.CommandType = CommandType.StoredProcedure;
-                cmd.CommandTimeout = 10;
+                cmd.CommandTimeout = 5;
                 cmd.ExecuteNonQuery();
                 Assert.Fail("Should not get to this point");
             }
             catch (MySqlException ex)
             {
                 TimeSpan ts = DateTime.Now.Subtract(start);
+                Assert.IsTrue(ts.TotalSeconds <= 10);
                 Assert.IsTrue(ex.Message.StartsWith("Timeout expired"), "Message is wrong");
             }
         }
@@ -153,12 +159,15 @@ namespace MySql.Data.MySqlClient.Tests
             if (version < new Version(5, 0)) return;
 
             // first we need a routine that will run for a bit
-            execSQL("CREATE PROCEDURE spTest() BEGIN SET @start=NOW()+0; REPEAT SET @end=NOW()-@start; " +
-                "UNTIL @end >= 5 END REPEAT; SELECT @start, @end; END");
+            execSQL(@"CREATE PROCEDURE spTest(duration INT) 
+                BEGIN 
+                    SELECT SLEEP(duration);
+                END");
 
             try
             {
                 MySqlCommand cmd = new MySqlCommand("spTest", conn);
+                cmd.Parameters.AddWithValue("duration", 10);
                 cmd.CommandType = CommandType.StoredProcedure;
                 cmd.CommandTimeout = 15;
                 cmd.ExecuteNonQuery();
@@ -167,6 +176,34 @@ namespace MySql.Data.MySqlClient.Tests
             {
                 Assert.Fail(ex.Message);
             }
+        }
+
+        [Category("5.0")]
+        [Test]
+        public void TimeoutDuringBatch()
+        {
+            execSQL(@"CREATE PROCEDURE spTest(duration INT) 
+                BEGIN 
+                    SELECT SLEEP(duration);
+                END");
+
+            execSQL("DROP TABLE IF EXISTS test");
+            execSQL("CREATE TABLE test (id INT)");
+
+            MySqlCommand cmd = new MySqlCommand(
+                "call spTest(10);INSERT INTO test VALUES(4)", conn);
+            cmd.CommandTimeout = 5;
+            try
+            {
+                cmd.ExecuteNonQuery();
+            }
+            catch (MySqlException ex)
+            {
+                Assert.IsTrue(ex.Message.StartsWith("Timeout expired"), "Message is wrong");
+            }
+
+            cmd.CommandText = "SELECT COUNT(*) FROM test";
+            Assert.AreEqual(0, cmd.ExecuteScalar());
         }
     }
 }
